--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["dotenv", "llms", "Ollama", "supabase"]
+  "cSpell.words": ["dotenv", "llms", "Ollama", "Promptpage", "supabase"]
 }
