--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-  "cSpell.words": ["dotenv", "llms", "Ollama", "Promptpage", "supabase"]
+  "cSpell.words": [
+    "dotenv",
+    "llms",
+    "Ollama",
+    "Promptpage",
+    "supabase",
+    "uuidv"
+  ]
 }
