Backend(UI): Changed the look of the ui for the promptpage and Navbar

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
   "cSpell.words": [
+    "aeternus",
     "Chatbox",
     "convo",
     "deepseek",
@@ -7,6 +8,7 @@
     "llms",
     "Ollama",
     "Promptpage",
+    "Sommar",
     "supabase",
     "uuidv"
   ]
