--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,5 +14,10 @@
     "sonner",
     "supabase",
     "uuidv"
-  ]
+  ],
+  "workbench.colorCustomizations": {
+    "terminal.background": "#00000000",
+    "minimap.background": "#00000000",
+    "scrollbar.shadow": "#00000000"
+  }
 }
